--- a/x-men/index.html
+++ b/x-men/index.html
@@ -209,49 +209,49 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a> -->
-   <a href="https://drive.google.com/file/d/1rij_oH_iJ1tzLIOjv2sgJaX1hqqSTtQH/view?usp=sharing">
+   <a href="https://shrinke.me/ePAw1wwr">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BZmIyMDk5NGYtYjQ5NS00ZWQxLTg2YzQtZDk1ZmM4ZDBlN2E3XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg">
           <h1 slot="header">X-Men (2000)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a> 
-      <a href="https://drive.google.com/file/d/1Vrhm0IueLnLQ0bBm0bk3tcZ__gjL7Yvb/view?usp=sharing">
+      <a href="https://shrinke.me/EfE4AN">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BNDk0NjYxMzIzOF5BMl5BanBnXkFtZTYwMTc1MjU3._V1_.jpg">
           <h1 slot="header">X2: X-Men United (2003)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a> 
-      <a href="https://drive.google.com/file/d/16Jhyd6t4jjoGH1yn0WXMo3mVIQNubr-3/view?usp=sharing">
+      <a href="https://shrinke.me/Pa93">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BNDBhNDJiMWEtOTg4Yi00NTYzLWEzOGMtMjNmNjAxNTBlMzY3XkEyXkFqcGdeQXVyNTIzOTk5ODM@._V1_.jpg">
           <h1 slot="header">X-Men: The Last Stand (2006)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a> 
-      <a href="https://drive.google.com/file/d/1smwVpDpabXOC2qxiEB2kynpwkQmu3hGj/view?usp=sharing">
+      <a href="https://shrinke.me/NnwVhpnq">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BZWRhMzdhMzEtZTViNy00YWYyLTgxZmUtMTMwMWM0NTEyMjk3XkEyXkFqcGdeQXVyNTIzOTk5ODM@._V1_UY1200_CR91,0,630,1200_AL_.jpg">
           <h1 slot="header">X-Men Origins: Wolverine (2009)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a> 
-      <a href="https://drive.google.com/file/d/1kp2kEfbsQf3VquWW3xMQ8DFTIxDxquXm/view?usp=sharing">
+      <a href="https://shrinke.me/a3e9G">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTg5OTMxNzk4Nl5BMl5BanBnXkFtZTcwOTk1MjAwNQ@@._V1_QL75_UX190_CR0,0,190,281_.jpg">
           <h1 slot="header">X-Men: First Class (2011)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a> 
-      <a href="https://drive.google.com/file/d/1Xaz-qix5hsF-bxI0lU0k7ez8aZ04zLQB/view?usp=sharing">
+      <a href="https://shrinke.me/lLzGK6wW">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BZGIzNWYzN2YtMjcwYS00YjQ3LWI2NjMtOTNiYTUyYjE2MGNkXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg">
           <h1 slot="header">X-Men: Days of Future Past (2014)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a> 
-      <a href="https://drive.google.com/file/d/1GCx1AnEhfcZOcTq9iSQCDlEHxxQFSlyc/view?usp=sharing">
+      <a href="https://shrinke.me/JoOUbggN">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMmZmYTgwZGItNDIxMS00MmRkLWEzODQtYTllNzM0ZWE1NmQ5XkEyXkFqcGdeQXVyODQzNTE3ODc@._V1_.jpg">
           <h1 slot="header">X-Men: Dark Phoenix (2019)</h1>
