--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
       
 <a href="https://youtube.com/shorts/A43PLynoH1o?feature=share">
         <card data-aos="fade-up" data-aos-delay="100"
-          data-image="">
+          data-image="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkDRTyPoo9ejXYAINCP1Ff38Nl-n30hl39Pg&usqp=CAU">
           <h1 slot="header">How To Open Links (Very Easy)</h1>
           <p slot="content"></p>
         </card>
