--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         </card>
       </a> 
       
-<a href="https://youtube.com/shorts/A43PLynoH1o?feature=share">
+<a href="https://youtu.be/uQW9KQ1BYXo">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkDRTyPoo9ejXYAINCP1Ff38Nl-n30hl39Pg&usqp=CAU">
           <h1 slot="header">How To Open Links (Very Easy)</h1>
