--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+             <script type="text/javascript">           
+               var app_url = 'https://gplinks.in/';
+               var app_api_token = '056aa995bdc60a11ad0be06a71ba7b192c1347d1';
+               var app_advert = 2;
+               var app_exclude_domains = ["https://movies.newtonas.tk/"];
+           </script>
+           <script src='//gplinks.in/js/full-page-script.js'></script>
+           
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -30,13 +38,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1121491723981481"
      crossorigin="anonymous"></script>
 
-<!-- <script type="text/javascript">
-    var app_url = 'https://shrinkme.io/';
-    var app_api_token = '59e6cd4ad27f2d0ae093635db3fc6ab5324041a7';
-    var app_advert = 2;
-    var app_domains = ["movies.newtonas.tk"];
-</script>
-<script src='https://shrinkme.io/js/full-page-script.js'></script> -->
+
 
 </head>
 
