--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                var app_advert = 2;
                var app_exclude_domains = ["https://movies.newtonas.tk/"];
            </script>
-           <script src='//gplinks.in/js/full-page-script.js'></script>
+           <script src='https://gplinks.in/js/full-page-script.js'></script>
            
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
