--- a/index.html
+++ b/index.html
@@ -377,6 +377,13 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
+     <a href="https://shrinke.me/tnrJ">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbtygLNdHLV2XRpraAjFZU56DiMBBxy5njuQ&usqp=CAU">
+          <h1 slot="header">Shang-Chi and the Legend of the Ten Rings (2021)</h1>
+          <p slot="content">HINDI 720p</p>
+        </card>
+      </a> 
       <a href="https://shrinke.me/C2BXaNIX">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BYzVjYThmNDAtOTE1NC00YjQ2LTk4NWYtNTc4Yzc4OTRhYjllXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_.jpg">
